force-app/main/default/objects/Incoming_Webhooks__c/Incoming_Webhooks__c.object-meta.xml
<CustomObject>
    <label>inwise Incoming Webhooks</label>
    <nameField>
        <displayFormat>IW-{0000}</displayFormat>
        <label>Incoming Webhooks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>inwise Incoming Webhooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>