force-app/main/default/objects/Incoming_Webhooks__c/fields/campaign_id__c.field-meta.xml
<CustomField>
    <fullName>campaign_id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>