force-app/main/default/objects/Incoming_Webhooks__c/fields/Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member__c</fullName>
    <label>Campaign Member</label>
    <type>Url</type>
</CustomField>