force-app/main/default/objects/Incoming_Webhooks__c/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>