force-app/main/default/objects/Incoming_Webhooks__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>inwise Incoming Webhooks</relationshipLabel>
    <relationshipName>inwise_Incoming_Webhooks</relationshipName>
    <type>Lookup</type>
</CustomField>