force-app/main/default/objects/Incoming_Webhooks__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <length>20</length>
    <type>Text</type>
</CustomField>