force-app/main/default/objects/Incoming_Webhooks__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <label>Trigger Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>