force-app/main/default/objects/Incoming_Webhooks__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>campaign_id__c</columns>
    <columns>Campaign_Member__c</columns>
    <columns>Lead__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>